feat detail added fav button

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -18,19 +18,30 @@
         android:id="@+id/EmailView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/ImageView"
+        android:layout_marginTop="15dp"
+        android:textAlignment="center"
         android:text="TITLE"
         android:textSize="30sp"
-        android:textStyle="bold"
-        android:layout_marginTop="15dp"
-        android:layout_below="@+id/ImageView"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/NameView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Deskripsi"
-        android:textSize="20sp"
         android:layout_below="@+id/EmailView"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="20dp"
+        android:text="Deskripsi"
+        android:textAlignment="center"
+        android:textSize="20sp" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fav_add"
+        android:textAlignment="center"
+        android:text="Add to Favorite"
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/NameView"/>
 
 </RelativeLayout>
